# machaonweb

./: LICENSE  README.md
back/: .env  Cargo.toml  Dockerfile  build.rs  docker-compose.yml
back/mTLS/: generate-keys.sh  openssl-node0.cnf  openssl-node1.cnf
back/migrations/2023-02-18-163221_create_db/: down.sql  up.sql
back/protos/: jobreceiver.proto
back/src/: main.rs  schema.rs
back/src/db/: dbhandler.rs  mod.rs  models.rs
back/src/grpc/: mod.rs
back/src/logic/: mod.rs
back/src/monitor/: mod.rs
back/src/rest/: mod.rs
back/src/utils/: mod.rs
front/: .env  package-lock.json  package.json
front/public/: index.html  manifest.json
front/src/: App.css  App.js  index.js  utils.js
front/src/components/: About.js  Citation.js  Contact.js  Footer.js  Home.js  Instructions.js  Layout.js  Navigation.js  NoMatch.js  Policies.js  RequestForm.js  Result.js  Results.js
