[package]
name = "machaonweb_back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.70", features = ["backtrace"] }
chrono = { version = "0.4.24", features = ["serde"] }
axum = "0.6.12"
axum-server = { version = "0.4.7", features = ["tls-rustls"] }
rustls = "0.21"
diesel_derives = "2.0.2"
diesel = { version = "2.0.3", features = ["mysql", "mysql_backend", "chrono", "r2d2", "numeric"] }
dotenvy = "0.15.7"
futures = "0.3.28"
futures-util = "0.3.28"
tokio = { version = "1.27.0", features = ["full"] }
tokio-io = "0.1.13"
tokio-util = { version = "0.7.7", features = ["io"] }
async-stream = "0.3.4"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tower-http = { version = "0.4.0", features = ["cors", "fs", "trace"] }
unicode-segmentation = "1.10.1"
rand = "0.8.5"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.16" 
tonic = { version = "0.9.0", features = ["transport", "tls", "tls-roots"] } 
prost = "0.11.8"
reqwest = "0.11.16"
digest = "0.10.6"
sha2 = "0.10.6"
zip = { version = "0.6.4", default-features = false, features = ["deflate"] }
uuid = { version = "1.3.0", features = ["v4"] }
glob = "0.3.1"
walkdir = "2.3.3"
regex = "1.7.3"
lazy_static = "1.4.0"

[build-dependencies]
tonic-build = "0.9.0"
